Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/Sample_Order_Request_Event__e.object-meta.xml
<CustomObject>
    <description>OCE to Salesforce</description>
    <label>Sample Order Request Event</label>
    <pluralLabel>Sample Order Request Events</pluralLabel>
</CustomObject>