Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AccCountryCode__c.field-meta.xml
<CustomField>
    <fullName>AccCountryCode__c</fullName>
    <label>AccCountryCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>