Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AccountOnekeyId__c.field-meta.xml
<CustomField>
    <fullName>AccountOnekeyId__c</fullName>
    <label>AccountOnekeyId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>