Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>AccountType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>