Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/Address_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Phone_Number__c</fullName>
    <label>Address Phone Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>