Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <label>AddressLine1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>