Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>AddressLine2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>