Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <label>AddressLine3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>