Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/AddressOneKeyId__c.field-meta.xml
<CustomField>
    <fullName>AddressOneKeyId__c</fullName>
    <label>AddressOneKeyId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>