Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>