Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/CareOf_AddressFirstName__c.field-meta.xml
<CustomField>
    <fullName>CareOf_AddressFirstName__c</fullName>
    <label>CareOf AddressFirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>