Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/CareOf_AddressLastName__c.field-meta.xml
<CustomField>
    <fullName>CareOf_AddressLastName__c</fullName>
    <label>CareOf AddressLastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>