Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>