Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>