Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>HomePhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>