Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>