Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>