Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/OCEOrderReference__c.field-meta.xml
<CustomField>
    <fullName>OCEOrderReference__c</fullName>
    <label>OCEOrderReference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>