Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <label>OtherPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>