Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>