Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <length>30</length>
    <type>Text</type>
</CustomField>