Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <label>ProgramType</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>