Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>StateProvince</label>
    <length>25</length>
    <type>Text</type>
</CustomField>