Prod-EU/force-app/main/default/objects/Sample_Order_Request_Event__e/fields/WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPhone__c</fullName>
    <label>WorkPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>